--- a/example/public/index.html
+++ b/example/public/index.html
@@ -4,9 +4,17 @@
         <meta charset="utf-8" />
         <meta
             name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            content="minimum-scale=1, initial-scale=1, width=device-width"
         />
         <meta name="theme-color" content="#000000" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        />
 
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
